Fixed Image overflow issue: when image with height larger than the  bounding box in crop page but smaller width was uploaded, it used to overflow, this issue if fixed now

--- a/src/Styles.css
+++ b/src/Styles.css
@@ -60,9 +60,7 @@ nav > ul > li{
 .home_back {
     text-align: center;
     font-family: 'Quattrocento';
-    
-background: rgb(207,245,231);
-background: linear-gradient(0deg, rgba(207,245,231,1) 0%, rgba(255,255,255,1) 100%);
+    background-color: white;
     height:100vh;  
 }
 .home--image{
@@ -119,7 +117,7 @@ background: linear-gradient(0deg, rgba(207,245,231,1) 0%, rgba(255,255,255,1) 10
 }
 .crop--view{
     background-color: #A0E4CB;
-    display: flex;
+    display: grid;
     margin: 20px;
     margin-top: 50px;
     margin-left: 80px;
@@ -129,9 +127,18 @@ background: linear-gradient(0deg, rgba(207,245,231,1) 0%, rgba(255,255,255,1) 10
     width: 100%;
     border-radius: 10px;
 }
-
-.crop--image{
-    /**/
+.image--container{
+    border-radius: 10px;
+    background-color: red;
+    width:100%;
+    height:70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.image--container  img{
+    max-width: 100%;
+    max-height: 100%;
 }
 canvas{
     display: none;
